--- a/app/src/main/res/layout/activity_resturant_list.xml
+++ b/app/src/main/res/layout/activity_resturant_list.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:progressActivity="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <include
         android:id="@+id/tool_bar"
-        layout="@layout/tool_bar_transparent" />
+        layout="@layout/tool_bar_resturant" />
     <com.vlonjatg.progressactivity.ProgressLinearLayout
         android:id="@+id/details_progressActivity"
         android:layout_width="match_parent"
