--- a/app/src/main/res/layout/cart_list_adapter.xml
+++ b/app/src/main/res/layout/cart_list_adapter.xml
@@ -16,28 +16,45 @@
             android:orientation="vertical">
             <com.sa.gograb.view.AppTextView
                 android:id="@+id/tv_item_name"
-                android:layout_width="match_parent"
+                android:layout_width="@dimen/_180sdp"
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:text="Indian Daal Fry"
                 android:textAllCaps="false"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:textAppearance="@style/SmallMediumText"
                 android:textColor="@color/main_text" />
-
-
-            <com.sa.gograb.view.AppTextView_SubTitle
-                android:id="@+id/unit_price_tv"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:singleLine="true"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:text="SAR 300"
-                android:textAllCaps="false"
-                android:textAppearance="@style/SmallMediumText"
-                android:textColor="@color/semi_color" />
+                android:orientation="horizontal">
+                <com.sa.gograb.view.AppTextView_SubTitle
+                    android:id="@+id/tv_currency"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:singleLine="true"
+                    android:text="SAR"
+                    android:textAllCaps="false"
+                    android:textAppearance="@style/SmallMediumText"
+                    android:textColor="@color/semi_color" />
+                <com.sa.gograb.view.AppTextView_SubTitle
+                    android:id="@+id/unit_price_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/_4sdp"
+                    android:singleLine="true"
+                    android:text="300"
+                    android:textAllCaps="false"
+                    android:textAppearance="@style/SmallMediumText"
+                    android:textColor="@color/semi_color" />
+            </LinearLayout>
+
+
+
         </LinearLayout>
         <LinearLayout
             android:id="@+id/quantity_ll"
@@ -68,7 +85,7 @@
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/activity_gutter_margin_half"
                 android:gravity="center"
-                android:text="1"
+                android:text=""
                 android:textAllCaps="true"
                 android:textAppearance="@style/MediumText"
                 android:textColor="@color/white"
