--- a/app/src/main/res/layout/home_category_adapter.xml
+++ b/app/src/main/res/layout/home_category_adapter.xml
@@ -13,14 +13,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_marginLeft="@dimen/_8sdp"
+            android:layout_marginRight="@dimen/_8sdp"
             android:orientation="vertical">
             <RelativeLayout
-                android:layout_width="@dimen/_64sdp"
-                android:layout_height="@dimen/_64sdp"
+                android:layout_width="@dimen/_50sdp"
+                android:layout_height="@dimen/_50sdp"
                 android:background="@drawable/circle_bg_grey">
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/iv_home_category"
+                    android:id="@+id/iv_home_filter_category"
                     android:layout_width="@dimen/_35sdp"
                     android:layout_height="@dimen/_29sdp"
                     android:layout_gravity="center_vertical"
@@ -31,10 +31,10 @@
 
 
             <com.sa.gograb.view.AppTextView_SubTitle
-                android:id="@+id/tv_category_title"
+                android:id="@+id/tv_filter_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_marginTop="@dimen/_4sdp"
                 android:text="@string/all"
                 android:textColor="@color/semi_color"
                 android:textAppearance="@style/SmallMediumSizeText"/>
@@ -47,13 +47,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_10sdp"
-            android:visibility="visible"
+            android:visibility="gone"
             android:layout_toRightOf="@+id/ln_category_all"
             android:gravity="center"
             android:orientation="vertical">
             <RelativeLayout
-                android:layout_width="@dimen/_64sdp"
-                android:layout_height="@dimen/_64sdp"
+                android:layout_width="@dimen/_50sdp"
+                android:layout_height="@dimen/_50sdp"
                 android:background="@drawable/circle_bg_grey">
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -66,10 +66,9 @@
             </RelativeLayout>
 
             <com.sa.gograb.view.AppTextView_SubTitle
-                android:id="@+id/tv_category_sub_title"
+                android:id="@+id/tv_category_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_8sdp"
                 android:gravity="center"
                 android:text="@string/server_fast"
                 android:textColor="@color/semi_color"
