--- a/app/src/main/res/layout/menu_item_list_adapter.xml
+++ b/app/src/main/res/layout/menu_item_list_adapter.xml
@@ -149,18 +149,47 @@
                 android:textAllCaps="false"
                 android:textAppearance="@style/SmallMediumText"
                 android:textColor="@color/main_text" />
-
-            <com.sa.gograb.view.AppTextView_SubTitle
-                android:id="@+id/unit_price_tv"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:singleLine="true"
-                android:text="SAR 300"
-                android:textAllCaps="false"
-                android:textAppearance="@style/SmallMediumText"
-                android:textColor="@color/semi_color" />
+                android:layout_marginTop="@dimen/_5sdp">
+                <com.sa.gograb.view.AppTextView_SubTitle
+                    android:id="@+id/tv_currency"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:singleLine="true"
+                    android:text="SAR"
+                    android:textAllCaps="false"
+                    android:textAppearance="@style/SmallMediumText"
+                    android:textColor="@color/semi_color" />
+
+                <com.sa.gograb.view.AppTextView_SubTitle
+                    android:id="@+id/unit_price_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/_4sdp"
+                    android:singleLine="true"
+                    android:text="300"
+                    android:textAllCaps="false"
+                    android:textAppearance="@style/SmallMediumText"
+                    android:textColor="@color/semi_color" />
+
+                <com.sa.gograb.view.AppTextView_SubTitle
+                    android:id="@+id/tv_offer_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/_4sdp"
+                    android:singleLine="true"
+                    android:text=""
+                    android:textAllCaps="false"
+                    android:textAppearance="@style/SmallMediumText"
+                    android:textColor="@color/semi_color" />
+
+            </LinearLayout>
+
 
 
             <com.sa.gograb.view.AppTextView_SubTitle
