--- a/app/src/main/res/layout/tool_bar_resturant.xml
+++ b/app/src/main/res/layout/tool_bar_resturant.xml
@@ -41,8 +41,8 @@
             android:visibility="visible" />
 
         <ImageView
-            android:visibility="gone"
-            android:id="@+id/menu_side"
+            android:visibility="visible"
+            android:id="@+id/iv_filter_rest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -50,6 +50,16 @@
             android:padding="@dimen/activity_gutter_margin_quarter"
             android:layout_toLeftOf="@+id/iv_filter"
             android:src="@drawable/ic_menu_side" />
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/iv_filter_rest_second"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:padding="@dimen/activity_gutter_margin_quarter"
+            android:layout_toLeftOf="@+id/iv_filter"
+            android:src="@drawable/ic_filter_restaurant" />
 
         <ImageView
             android:id="@+id/iv_filter"
