--- a/app/src/main/res/layout/wishlist_adapter.xml
+++ b/app/src/main/res/layout/wishlist_adapter.xml
@@ -41,9 +41,9 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:layout_marginLeft="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_10sdp"
-                        android:layout_marginRight="@dimen/_10sdp">
+                        android:layout_marginRight="@dimen/_5sdp">
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -130,12 +130,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/rl_restaurant"
-                android:layout_marginLeft="@dimen/_25sdp"
+                android:layout_marginLeft="@dimen/_15sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:orientation="horizontal">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_favourites"
+                    android:visibility="visible"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                </androidx.recyclerview.widget.RecyclerView>
 
                 <com.sa.gograb.view.AppTextView_SubTitle
+                    android:visibility="gone"
                     android:id="@+id/tv_cusine_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -144,7 +152,6 @@
                     android:textAllCaps="true"
                     android:textAppearance="@style/SmallerSizeText"
                     android:textColor="@color/semi_color" />
-
 
             </LinearLayout>
 
